# Difference-calculator

./: Makefile  README.md  pyproject.toml  setup.cfg  stylish  yml
.github/workflows/: pyci.yml
gendiff/: __init__.py  build_diff.py  cli.py  diff_generator.py  generate_diff.py  generate_start.py  parser.py  read_file.py
gendiff/format/: json_formated.py  plain.py  plain_formated.py  stylish.py  stylish_formated.py
gendiff/scripts/: gendiff.py
tests/: test_generate_diff.py
tests/fixtures/: expected_diff_json.txt  expected_stylish.txt  file4.json
