[tool.poetry]
name = "PYTHON-PROJECT-50"
version = "0.1.0"
description = ""
authors = ["NRomanLee <leeroman680@gmail.com>"]
readme = "README.md"
packages = [{ include = "gendiff" }]

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.cli:main"
generate_start = "gendiff.generate_start:main"
