[tool.poetry]
name = "PYTHON-PROJECT-50"
version = "0.1.0"
description = ""
authors = ["NRomanLee <leeroman680@gmail.com>"]
readme = "README.md"
packages = [{ include = "gendiff" }]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.0"
pytest-cov = "^4.0.0"  # Добавлено для покрытия кода
codeclimate-test-reporter = "^0.2.3"  # Добавлено для CodeClimate
autopep8 = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.cli:main"
generate_start = "gendiff.generate_start:main"
generate_start2 = "gendiff.generate_start2:main"