[tool.poetry]
name = "PYTHON-PROJECT-50"
version = "0.1.0"
description = ""
authors = ["NRomanLee <leeroman680@gmail.com>"]
readme = "README.md"
packages = [{ include = "gendiff" }]

[tool.poetry.dependencies]
python = "^3.10"
pyyaml = "^6.0.1"
coverage = "^5.2.1" 
pytest-cov = "^2.12.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
flake8 = "^7.1.0"
autopep8 = "^2.3.1"
codeclimate-test-reporter = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.cli:main"
generate_start = "gendiff.generate_start:main"
generate_start2 = "gendiff.generate_start2:main"